fix: Overflow issue on the receive page

--- a/css/receive.css
+++ b/css/receive.css
@@ -7,8 +7,6 @@ body {
   width: 100%;
   height: 100%;
   max-width: 100vw !important;
-  overflow-x: hidden;
-  overflow-y: hidden;
 }
 
 .wrapper {
@@ -49,7 +47,6 @@ input[type="text"] {
 
 .full-screen {
   width: 100%;
-  height: 1000px;
   background-color: #3cbcc3;
   transition: display 0.5s;
   position: absolute;
